[package]
name = "lib-simulation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]                 
lib-neural-network = { path = "../neural-network", version = "0.1.0" }
nalgebra = {version = "0.32.2", features = ["rand-no-std"]}
rand = "0.8"

[dev-dependencies]
test-case = "3.1.0"
